--- a/Modify html and css/style.css
+++ b/Modify html and css/style.css
@@ -1,6 +1,6 @@
 body {
-  background: url('https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwijq__eyJrUAhWmhVQKHXqQAycQjRwIBw&url=http%3A%2F%2Fgiphy.com%2Fgifs%2Fanimated-patrick-Z1cEBqh95lo7C&psig=AFQjCNHOqqzMHp53ZefKpcDVAP7PybfrtA&ust=1496334445362937') 
-      background-size! cover; important;
+  background: url('http://38.media.tumblr.com/6a5e4bd08dfea03c189ccba686ef9ad9/tumblr_n0hq9aMD871qcgdpco1_400.gif') !important;
+      background-size: cover !important;
 }
  
 #masthead,
